ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      [j0] | 2023-12-07T00:00:53.235+00:00 E  ASSERT   4457000 [conn10] "Tripwire assertion","attr":{"error":{"code":7349401,"codeName":"Location7349401","errmsg":"Was not able to re-parse queryStats key when reading queryStats.Status TypeMismatch: BSON field '$vectorSearch.queryVector.0' is the wrong type 'int', expected type 'double' Hash: 18428075488767673330 Query Shape: { cmdNs: { db: \"test\", coll: \"@\" }, command: \"aggregate\", pipeline: [ { $vectorSearch: { queryVector: [ 1 ], path: \"?\", limit: 1, numCandidates: 1 } }, { $_internalSearchIdLookup: {} }, { $project: { _id: true, ns2: { $const: \"?\" }, multi: { $const: \"?\" } } }, { $sort: { _id: 1 } } ] }"},"location":"{fileName:\"src\\mongo\\db\\pipeline\\document_source_query_stats.cpp\", line:255, functionName:\"toDocument\"}"} 

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Alyssa Clark (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: