SERVER-83968 vectorSearch.queryVector fails to re-parse

GitOrigin-RevId: 4b9d1dc1590b4840ebafa83fabc449769aa03310