src/mongo/db/modules/enterprise/src/vector_search/document_source_vector_search_test.cpp
@@ -168,5 +168,62 @@ TEST_F(DocumentSourceVectorSearchTest, OptionalArgumentsAreNotSpecified) {
         redact(*(vectorStage.front())));
 }
 
+/**
+ * Helper function that parses the $vectorSearch aggregation stage from the input, serializes it
+ * to its representative shape, re-parses the representative shape, and compares to the original.
+ */
+void assertRepresentativeShapeIsStable(auto expCtx,
+                                       BSONObj inputStage,
+                                       BSONObj expectedRepresentativeStage) {
+    auto parsedStage =
+        *DocumentSourceVectorSearch::createFromBson(inputStage.firstElement(), expCtx).begin();
+    std::vector<Value> serialization;
+    auto opts = SerializationOptions{LiteralSerializationPolicy::kToRepresentativeParseableValue};
+    parsedStage->serializeToArray(serialization, opts);
+
+    auto serializedStage = serialization[0].getDocument().toBson();
+    ASSERT_BSONOBJ_EQ(serializedStage, expectedRepresentativeStage);
+
+    auto roundTripped =
+        *DocumentSourceVectorSearch::createFromBson(serializedStage.firstElement(), expCtx).begin();
+
+    std::vector<Value> newSerialization;
+    roundTripped->serializeToArray(newSerialization, opts);
+    ASSERT_EQ(newSerialization.size(), 1UL);
+    ASSERT_VALUE_EQ(newSerialization[0], serialization[0]);
+}
+
+TEST_F(DocumentSourceVectorSearchTest, RoundTripSerialization) {
+    assertRepresentativeShapeIsStable(getExpCtx(),
+                                      fromjson(R"({
+        $vectorSearch: {
+            queryVector: [1.0, 2.0],
+            path: "x",
+            numCandidates: 100,
+            limit: 10,
+            index: "x_index",
+            filter: {
+                x: {
+                    "$gt": 0
+                }
+            }
+        }
+    })"),
+                                      fromjson(R"({
+            "$vectorSearch": {
+                "queryVector": [1],
+                "path": "?",
+                "index": "x_index",
+                "limit": 1,
+                "numCandidates": 1,
+                "filter": {
+                    "x": {
+                        "$gt": 1
+                    }
+                }
+            }
+        })"));
+}
+
 }  // namespace
 }  // namespace mongo
